# NetSentinel

./: .flake8  .gitignore  .pre-commit-config.yaml  BACKEND_IMPROVEMENTS.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  Dockerfile.event-processor  Makefile  README.md  Real-Time Detection and Mitigation of Advanced Network Anomalies and Security Threats.md  SETUP_GUIDE.md  TEAM_PARALLEL_WORK_PLAN.md  TESTING_PHASE_PARALLEL_WORK.md  TESTING_PHASE_RESULTS.md  TODO_DEV1_ML.md  TODO_DEV2_WEBSOCKET.md  TODO_DEV3_AUTH.md  check_deps.py  debug_ml_available.py  docker-compose.yml  initial goal.md  netsentinel.service  pyproject.toml  pytest.ini  requirements-core.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  test_imports.py  todo.md  tox.ini
.github/: README.md
.github/workflows/: ci.yml  comprehensive-tests.yml  docker-build.yml  netsentinel_tests.yml  publish.yml
build_scripts/: build_netsentinel.sh  docker-hybrid-setup.sh  start-hybrid.sh  stop-hybrid.sh  test-hybrid.sh
data/: test_users_046518cf.json  test_users_07ae6b3f.json  test_users_0ca4c8fe.json  test_users_0f352a7c.json  test_users_12aa2f26.json  test_users_36ec1ef4.json  test_users_3ee07048.json  test_users_44dbb9f1.json  test_users_46490f15.json  test_users_51333a96.json  test_users_54a9b3c7.json  test_users_555882be.json  test_users_59f4788d.json  test_users_5a0cf488.json  test_users_5a677747.json  test_users_66b55378.json  test_users_6b2c9680.json  test_users_6f8b3b6b.json  test_users_716771da.json  test_users_887dcb62.json  test_users_8c0c2003.json  test_users_93e4d77f.json  test_users_99152c13.json  test_users_a18fc10e.json  test_users_ab5e2194.json  test_users_api_1a4df95e.json  test_users_api_23ac63a6.json  test_users_api_3b052f0a.json  test_users_api_5f60fcdf.json  test_users_api_6ab0f929.json  test_users_api_7583a32f.json  test_users_api_c8502189.json  test_users_api_d81be397.json  test_users_api_security_00edb7fb.json  test_users_api_security_05ec21f3.json  test_users_api_security_0a8526ec.json  test_users_api_security_118e5642.json  test_users_api_security_18cae920.json  test_users_api_security_1acccabc.json  test_users_api_security_1d13d6ce.json  (+215 more)
docs/: API.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCUMENTATION_IMPROVEMENTS.md  DOCUMENTATION_INDEX.md  Makefile  README.md  TROUBLESHOOTING.md  ai-features-overview.md  conf.py  content-migration-checklist.md  directory-reorganization.md  implementation-status.md  index.rst  migration-complete.md  ml-setup-guide.md  ml-usage-guide.md  project-overview.md  sdn-integration.md  siem-integration.md  src-structure-guide.md
docs/alerts/: email.rst
docs/services/: webserver.rst
docs/starting/: netsentinel.rst
helm/: README.md
helm/netsentinel/: Chart.yaml  values.yaml
helm/netsentinel/templates/: _helpers.tpl  namespace.yaml
hybrid-data/config/: prometheus.yml
hybrid-data/kafka/: server.properties
hybrid-data/kafka/data/: meta.properties
hybrid-data/opencanary/config/: opencanary.conf
hybrid-data/valkey/: valkey.conf
hybrid-data/valkey/data/: dump.rdb
k8s/: README.md  elasticsearch.yaml  event-processor.yaml  grafana.yaml  influxdb.yaml  ingress.yaml  kafka.yaml  namespace.yaml  netsentinel.yaml  prometheus.yaml  redis.yaml  valkey.yaml  zookeeper.yaml
netsentinel/: alert_manager.py  enterprise_database.py  event_processor.py  firewall_manager.py  ml_anomaly_detector.py  packet_analyzer.py  sdn_integration.py  siem_integration.py  threat_intelligence.py
netsentinel-ui/: .env-example  IMPLEMENTATION_STATUS.md  README.md  To-Do-frontend.md  babel.config.cjs  design.md  eslint.config.js  index.html  jest.config.cjs  netlify.toml  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
netsentinel-ui/coverage/: index.html  lcov.info
netsentinel-ui/coverage/lcov-report/: index.html
netsentinel-ui/coverage/src/: App.tsx.html  index.html
netsentinel-ui/docs/: README.md  deployment.md
netsentinel-ui/docs/api/: hooks.md
netsentinel-ui/docs/components/: ErrorBoundary.md  StatCard.md
netsentinel-ui/e2e/: auth.spec.ts  dashboard.spec.ts  error-handling.spec.ts
netsentinel-ui/playwright-report/: index.html
netsentinel-ui/src/: App.tsx  index.css  main.tsx
netsentinel-ui/src/components/: AlertFeed.tsx  ConfirmationModal.tsx  CorrelationBuilder.tsx  CustomDashboard.tsx  DashboardCustomizer.tsx  DashboardWidget.tsx  ErrorBoundary.tsx  ExportButton.tsx  FilterBuilder.tsx  Header.tsx  HelpGuide.tsx  LoadingSpinner.tsx  OnboardingTour.tsx  PageLayout.tsx  PerformanceMonitor.tsx  ScopeTagsInput.tsx  SidebarNav.tsx  StatCard.tsx  SystemHealth.tsx  ThreatDetailsModal.tsx  ThreatTable.tsx  ThreatTimeline.tsx  Toast.tsx  index.ts
netsentinel-ui/src/hooks/: index.ts  mock-auth.tsx  useApi-hook.ts  useDashboard.tsx  useErrorReporting.ts  useFilters.tsx  useOnboardingTour.ts  usePerformanceMonitor.tsx  useToast.tsx  useWidgetData.tsx
netsentinel-ui/src/mock/: alerts-mock.ts  api-keys-mock.ts  auth-mock.ts  (+11 more)
netsentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
netsentinel/tests/: README.md  conftest.py
opencanary/: event_processor.py  logger.py
scripts/: README.md  run_all_tests.ps1  simulate_netsentinel_event.py  start_event_processor.py  test-netsentinel-docker.ps1  test_alerting.py  test_complete_data_flow.py  test_enterprise_database.py  test_firewall.py  test_functionality.ps1  test_packet_analysis.py  test_sdn_integration.py  test_siem_integration.py  test_threat_intelligence.py  train_ml_models.py
src/: README.md  __init__.py
src/data/: .netsentinel.conf  users.json
src/netsentinel/: __init__.py  config.py  enterprise_database.py  firewall_manager.py  logger.py  ml_anomaly_detector.py  packet_analyzer.py  sdn_integration.py  siem_integration.py  threat_intelligence.py
src/tests/: conftest.py  test_cleanup_validation.py  test_core_components.py  test_websocket.py
tests/integration/: test_netsentinel_integration.py
tests/unit/: test_event_processor.py  test_firewall_manager.py  test_sdn_integration.py  test_siem_integration.py  test_smoke.py
(+431 files in other folders)
